Don't set MaxPermSize for scripted