@@ -1,7 +1,5 @@
 ScriptedPlugin.scriptedSettings
 
-scriptedLaunchOpts := { scriptedLaunchOpts.value ++
-	  Seq("-Xmx1024M", "-XX:MaxPermSize=256M", "-Dplugin.version=" + version.value)
-}
+scriptedLaunchOpts ++= Seq("-Xmx1024M", "-Dplugin.version=" + version.value)
 
 scriptedBufferLog := false
